--- a/src/main/webapp/css/jpetstore.css
+++ b/src/main/webapp/css/jpetstore.css
@@ -180,9 +180,6 @@ body>#Menu {
   height: 9ex;
 }
 
- {
-}
-
 #Search {
   width: 33%;
   height: 9ex;
@@ -341,4 +338,26 @@ body>#Banner {
   float: left;
   background-color:#ccc;
   text-align:left;
+}
+
+.tableboot {
+  --bs-table-color: var(--bs-body-color);
+  --bs-table-bg: transparent;
+  --bs-table-border-color: var(--bs-border-color);
+  --bs-table-accent-bg: transparent;
+  --bs-table-striped-color: var(--bs-body-color);
+  --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
+  --bs-table-active-color: var(--bs-body-color);
+  --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+  --bs-table-hover-color: var(--bs-body-color);
+  --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
+  width: 100%;
+  margin-bottom: 1rem;
+  color: var(--bs-table-color);
+  vertical-align: top;
+  border-color: var(--bs-table-border-color);
+}
+.table-striped > tbody > tr:nth-of-type(odd) > * {
+  --bs-table-accent-bg: var(--bs-table-striped-bg);
+  color: var(--bs-table-striped-color);
 }
